# PriceFeedSDK

./: .gitignore  Cargo.toml  Dockerfile  EVALUATION.md  README.md  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/pricefeed-client/: Cargo.toml
crates/pricefeed-client/benches/: client_bench.rs
crates/pricefeed-client/src/: cache.rs  client.rs  error.rs  lib.rs  retry.rs  transport.rs
crates/pricefeed-client/tests/: client.rs
crates/pricefeed-http/: Cargo.toml
crates/pricefeed-http/src/: error.rs  lib.rs  transport.rs  wire.rs
crates/pricefeed-http/tests/: wire.rs
crates/pricefeed-types/: Cargo.toml
crates/pricefeed-types/src/: error.rs  ids.rs  lib.rs  price.rs  update.rs
crates/pricefeed-types/tests/: types.rs
examples-dapp/: Cargo.toml
examples-dapp/src/: main.rs
postman/: PriceFeedSDK.postman_collection.json
python/: README.md  pyproject.toml
python/src/pricefeed_sdk/: __init__.py  cache.py  client.py  errors.py  http.py  transport.py  types.py
python/tests/: test_sdk.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: cache.ts  client.ts  errors.ts  http.ts  index.ts  retry.ts  transport.ts  types.ts
typescript/test/: sdk.test.mjs
