[workspace]
resolver = "2"
members = [
    "crates/pricefeed-types",
    "crates/pricefeed-client",
    "crates/pricefeed-http",
    "examples-dapp",
]
exclude = ["target", "typescript", "python"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["PriceFeedSDK contributors"]
repository = "https://github.com/example/pricefeed-sdk"

[workspace.dependencies]
# --- internal ---
pricefeed-types = { path = "crates/pricefeed-types" }
pricefeed-client = { path = "crates/pricefeed-client" }
pricefeed-http = { path = "crates/pricefeed-http" }

# --- async runtime ---
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- errors ---
thiserror = "2"
anyhow = "1"

# --- http client (optional, behind feature) ---
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# --- observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# --- config / cli (examples) ---
clap = { version = "4.5", features = ["derive", "env"] }

# --- concurrency ---
parking_lot = "0.12"

# --- time ---
chrono = { version = "0.4", features = ["serde"] }

# --- testing / bench ---
criterion = { version = "0.5" }
proptest = "1.5"
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
debug = true
strip = false
