[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pricefeed-sdk"
version = "0.1.0"
description = "Python consumer SDK for PriceFeed — generic, transport-agnostic price client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "PriceFeedSDK contributors" }]
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["src"]
