[package]
name = "pricefeed-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Generic, transport-agnostic price-feed client with caching, retry, and timeouts."

[dependencies]
pricefeed-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
mockall = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "client_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
