[package]
name = "pricefeed-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "HTTP/GraphQL transport for the PriceFeed SDK (OracleForge/OracleBridge compatible)."

[dependencies]
pricefeed-types = { workspace = true }
pricefeed-client = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }

[lints.rust]
unsafe_code = "forbid"
