[package]
name = "pricefeed-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core typed domain for the PriceFeed SDK: validated feed ids, fixed-point prices, confidence intervals, and staleness logic. No I/O."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
proptest = { workspace = true }
